<resources>
    <!--String para nome das paginas-->
    <string name="app_name">IATechTools</string>
    <string name="app_name_notalista">Bloco de Notas</string>
    <string name="app_name_notacriacao">Crie sua nota</string>
    <string name="app_name_calculadora">Calculadora</string>
    <string name="app_name_todolist">Lista de Afazeres</string>

    <!--String para Menu Principal-->
    <string name="btNotepad">Bloco de Notas</string>
    <string name="btToDoList">Lista de Afazeres</string>
    <string name="btCalculadora">Calculadora</string>

    <!--String para Notepad-->
    <string name="adicionarNota">Adicionar Nota</string>
    <string name="tituloNota">Título</string>
    <string name="textoNota">Descrição</string>
    <string name="btSalvarNota">Salvar</string>
    <string name="data">Data criação: </string>
    <string name="excluir">Excluir essa nota?</string>
    <string name="btDeletarNota">Deletar</string>

    <!--String para ToDoList-->
    <string name="hintCampoTodo">Insira um ToDo</string> <!--todo alterar nome da variavel-->
    <string name="btAdicionarToDo">Adicionar à lista</string>
    <string name="btLimparListaToDo">Limpar a lista</string>

    <!--String para Calculadora-->
    <string name="btNum1">1</string>
    <string name="btNum2">2</string>
    <string name="btNum3">3</string>
    <string name="btNum4">4</string>
    <string name="btNum5">5</string>
    <string name="btNum6">6</string>
    <string name="btNum7">7</string>
    <string name="btNum8">8</string>
    <string name="btNum9">9</string>
    <string name="btNum0">0</string>
    <string name="btNum00">00</string>
    <string name="btSoma">+</string>
    <string name="btSub">-</string>
    <string name="btMult">X</string>
    <string name="btDiv">÷</string>
    <string name="btIgual">=</string>
    <string name="btPonto">.</string>
    <string name="btLimpar">L</string>
    <string name="btMod">%</string>
    <string name="btApagar">←</string>
    <string name="tvResultado"></string>
    <string name="edCalculo"></string>
</resources>
