<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotacriacaoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTituloNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tituloNota"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextoNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textoNota"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNota"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="clip_vertical"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSalvarNota"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:onClick="btSalvarNota"
        android:text="@string/btSalvarNota"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:ignore="OnClick" />


    <Button
        android:id="@+id/btDeletarNota"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btDeletarNota"
        android:textAllCaps="false"
        android:textColor="#FD0000"
        android:textSize="18sp"
        android:visibility="invisible" />


</LinearLayout>